# Computers-Shop

./: .env.prod  README.md  computers_shop.sql  docker-compose.yml  pyproject.toml
nginx/: nginx.conf
pc_shop/: Dockerfile  manage.py  req.txt
pc_shop/cart/: cart.py  models.py  urls.py  views.py
pc_shop/cart/migrations/: 0001_initial.py
pc_shop/cart/templatetags/: cart_tags.py
pc_shop/computers/: details_filter.py  forms.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py
pc_shop/computers/migrations/: 0001_initial.py  0002_product_slug_alter_product_photo.py  0003_product_availability.py  0004_category_photo_category_plural_name_and_more.py  0005_memory_product_company.py  0006_specification_product_details.py  0007_remove_product_company_remove_product_description_and_more.py  0008_rename_max_frequency_specification_frequency_and_more.py  0009_rename_slug_product_product_slug_and_more.py  0010_remove_category_products_product_category.py  0011_remove_category_details.py  0012_rename_cat_slug_category_slug_and_more.py  0013_alter_product_details.py  0014_mainparameters.py  0015_rename_mainparameters_mainspecification.py  0016_specification_category.py  0017_remove_mainspecification_category_and_more.py  0018_remove_specification_category_and_more.py  0019_alter_product_options_alter_product_slug.py  0020_alter_product_name.py  0021_alter_product_photo.py  0022_cart_item.py  (+1 more)
pc_shop/computers/templatetags/: computers_tags.py
pc_shop/pc_shop/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
pc_shop/templates/: base.html  create_product.html
(+1814 files in other folders)
